[gd_scene load_steps=12 format=2]

[ext_resource path="res://player_shader.shader" type="Shader" id=1]
[ext_resource path="res://Assets/Tilesets/Itch release raw tileset 01.png" type="Texture" id=2]
[ext_resource path="res://Scenes/EnemyRay.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Walker.gd" type="Script" id=4]
[ext_resource path="res://Scenes/DeathArea.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 80, 8, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 8, 80, 8, 8 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 16.0

[node name="Walker" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 9
script = ExtResource( 4 )
speed = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 2 )
scale = Vector2( 3, 3 )
frames = SubResource( 5 )
frame = 1
speed_scale = 0.25
playing = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 150.0
margin_bottom = 1.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyRay" parent="." instance=ExtResource( 3 )]

[node name="SprintTimer" type="Timer" parent="."]
one_shot = true

[node name="ResetTimer" type="Timer" parent="."]
one_shot = true

[node name="DeathArea" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea"]
shape = SubResource( 6 )
[connection signal="timeout" from="SprintTimer" to="." method="_on_SprintTimer_timeout"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]
